packages/leaflet-map/src/css/base-map.css
:root {
  --basemap-map-width: 100%;
  --basemap-map-height: 100%;
  --basemap-map-aspect-ratio: 16/9;
}

.map-container.osc-map {
  width: var(--basemap-map-width);
  height: var(--basemap-map-height);
  aspect-ratio: var(--basemap-map-aspect-ratio);
}

.osc-base-map-widget-container {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  z-index: 1;

}

.osc-base-map-widget-container .osc-map-marker-faded {
  opacity: .35;
}

.osc-base-map-widget-container .osc-map-marker-cluster-faded {
  opacity: .35;
}

.leaflet-container a {
  display: inline-block;
  font-size: 18px;
  color: var(--utrecht-button-primary-action-background-color);
}
.leaflet-bottom.leaflet-right{
  display: none;
}


.leaflet-popup .leaflet-popup-content{
  display: flex;
  flex-direction: column;
  gap: .5rem;
}

